adding and removing connections and tracking rock paper scissors selection

--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
     </head>
      
     <body>
-
+        <button id='rock' class='buttons' value='rock'>
+            rock
+        </button>
+        <button id='paper' class='buttons' value='paper'>
+            paper
+        </button>
+        <button id='scissors' class = 'buttons' value='scissors'>
+            scissors
+        </button>
+        <p>user picked:</p>
+        <div id='selection'>
+        </div>
+        <div id='numChildren'>
+        </div>
+        <div id='playerNumber'>
+        </div>
+        <div id='gameState'>
+        </div>
+        <script src="assets/javascript/app.js"></script>
     </body>
+
 </html>
