cleaned up code & comments and tested before moving to next stage

--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
         <p>user picked:</p>
         <div id='selection'>
         </div>
-        <div id='numChildren'>
-        </div>
-        <div id='playerNumber'>
-        </div>
-        <div id='gameState'>
+        <div id='playerName'>
         </div>
         <script src="assets/javascript/app.js"></script>
     </body>
