updating each player with their opponents selections

--- a/index.html
+++ b/index.html
@@ -11,19 +11,12 @@
     </head>
      
     <body>
-        <button id='rock' class='buttons' value='rock'>
-            rock
-        </button>
-        <button id='paper' class='buttons' value='paper'>
-            paper
-        </button>
-        <button id='scissors' class = 'buttons' value='scissors'>
-            scissors
-        </button>
-        <p>user picked:</p>
-        <div id='selection'>
+        <div id='gameContainer'>
         </div>
-        <div id='playerName'>
+        <p>user picked:</p>
+        <div id='mySelection'>
+        </div>
+        <div id='opponentsSelection'>
         </div>
         <script src="assets/javascript/app.js"></script>
     </body>
