most logic working - just tidying up some game restart stuff next

--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
     <body>
         <div id='gameContainer'>
         </div>
-        <p>user picked:</p>
         <div id='mySelection'>
         </div>
         <div id='opponentsSelection'>
+        </div>
+        <div id='wins'>
+        </div>
+        <div id='losses'>
+        </div>
+        <div id='status'>
+        </div>
+        <div id='restartContainer'>
         </div>
         <script src="assets/javascript/app.js"></script>
     </body>
