--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </head>
      
     <body>
+        <div id='headerMessage'>
+        </div>
         <div id='gameContainer'>
         </div>
         <div id='mySelection'>
