fixed the missing waiting message for 3+ players

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         </div>
         <div id='restartContainer'>
         </div>
+        <div id='waitMessage'>
+        </div>
         <script src="assets/javascript/app.js"></script>
     </body>
 
